# rusty-shed

./: .cz.toml  .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REQUIREMENTS.md  package.json  pnpm-lock.yaml  vite.config.js
.githooks/: commit-msg
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_create_collection_schema.sql  0001_create_railway_model.sql  0001_create_railway_models_and_rolling_stocks.sql  0002_create_collection_schema.sql
src-tauri/src/: axum_server.rs  db.rs  lib.rs  main.rs  state.rs  test_utils.rs
src-tauri/src/catalog/domain/: availability_status.rs  body_shell_type.rs  category.rs  chassis_type.rs  control.rs  coupling.rs  coupling_socket.rs  dcc_interface.rs  delivery_date.rs  epoch.rs  feature_flag.rs  length_over_buffers.rs  mod.rs  period_of_activity.rs  power_method.rs  product_code.rs  radius.rs  railway_company.rs  railway_id.rs  railway_model.rs  railway_model_id.rs  railway_status.rs  ratio.rs  rolling_stock.rs  rolling_stock_id.rs  rolling_stock_railway.rs  scale.rs  scale_gauge.rs  service_level.rs  sub_category.rs  technical_specifications.rs  track_gauge.rs
src-tauri/src/catalog/domain/railway_models/: control.rs  dcc_interface.rs  length_over_buffers.rs  mod.rs
src-tauri/src/catalog/infrastructure/: testing.rs
src-tauri/src/collecting/application/: get_collection.rs  mod.rs
src-tauri/src/collecting/domain/: collection.rs  collection_id.rs  collection_item.rs  collection_item_id.rs  mod.rs  owned_rolling_stock.rs  purchase_info.rs  repository.rs  summary.rs
src-tauri/src/collecting/domain/collection/: collection_item.rs  collection_struct.rs  owned_rolling_stock.rs  purchase_info.rs  repository.rs  summary.rs
src-tauri/src/collecting/infrastructure/: entities.rs  mod.rs  sqlite.rs  sqlite_repo.rs  testing.rs
src-tauri/src/collecting/interface/: command_handlers.rs  http_handlers.rs
src-tauri/src/core/domain/: address.rs  currency.rs  error.rs  length.rs  measure_units.rs  mod.rs  monetary_amount.rs  trn.rs
src-tauri/src/core/infrastructure/: error.rs
src/lib/: bindings.ts  tauri-logger.ts
src/lib/components/: BottomNavigation.svelte  DepotListCard.svelte  DepotTable.svelte  DepotView.svelte  QuickActionButton.svelte  RecentItemCard.svelte  SearchBar.svelte  SidebarNavigation.svelte  StatsCard.svelte
src/lib/data/: mock.ts
src/lib/i18n/: en.json  index.ts  it.json
src/lib/stores/: app.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
