[package]
name = "rusty-shed"
version = "0.1.0"
description = "The ultimate companion app for scale modelers and collectors"
authors = ["Carlo Micieli <piovarolo@gmail.com>"]
edition = "2024"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rusty_shed_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
async-trait = "0.1.89"
axum = "0.8.8"
once_cell = "1"
regex = "1"
rand = "0.9"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
thiserror = "2"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
xdg = "3.0.0"

[dev-dependencies]
rstest = "0.26"
serde_json = "1.0"
