[package]
name = "rusty-shed"
version = "0.1.0"
description = "The ultimate companion app for scale modelers and collectors"
authors = ["Carlo Micieli <piovarolo@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.92.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rusty_shed_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build            = { version = "2", features = [] }

[dependencies]
anyhow                 = "1"
async-trait            = "0.1.89"
chrono                 = { version = "0.4", features = ["serde"] }
log                    = "0.4"
once_cell              = "1"
regex                  = "1"
rust_decimal           = { version = "1.36.0", features = ["serde-with-float"] }
rust_decimal_macros    = "1.36.0"
serde                  = { version = "1.0.228", features = ["derive"] }
sqlx                   = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
strum                  = "0.27"
strum_macros           = "0.27"
tauri                  = { version = "2", features = [] }
tauri-plugin-http      = "2"
tauri-plugin-log       = "2"
tauri-plugin-opener    = "2"
specta                 = { version = "2.0.0-rc.21", features = ["derive", "chrono", "uuid"] }
specta-typescript      = "0.0.9"
tauri-specta           = { version = "2.0.0-rc.21", features = ["typescript"] }
thiserror              = "2"
tokio                  = { version = "1.48", features = ["rt-multi-thread", "macros"] }
uuid                   = { version = "1", features = ["v4", "serde", "fast-rng"] }
xdg                    = "3.0.0"

[dev-dependencies]
pretty_assertions      = "1.4.1"
rstest                 = "0.26"
serde_derive           = "1.0.228"
serde_json             = "1.0"
